<resources>
    <string name="app_name">doubletapp_hw</string>
    <string name="title_activity_second">SecondActivity</string>
    <string name="add">Добавить</string>
    <string name="add_habit">Добавьте привычку</string>
    <string name="habit_name">Название привычки</string>
    <string name="description">Описание</string>
    <string name="priority">Приоритет</string>
    <string name="positive">Положительная</string>
    <string name="negative">Отрицательная</string>
    <string name="frequency">Во сколько дней</string>
    <string name="back">Назад</string>
    <string name="save">Сохранить</string>
    <string name="pick_colour">Выбрать цвет</string>
    <string name="drop_down">Раскрыть</string>
    <string name="drop_up">Скрыть</string>
    <string name="hight">Высокий</string>
    <string name="mid">Средний</string>
    <string name="low">Низкий</string>
    <string name="home">Главная</string>
    <string name="habit_list">Список привычек</string>
    <string name="info">О приложении</string>
    <string name="edit_habit">Редактирование привычки</string>
    <string name="filter">Сортировка</string>
    <string name="search_by_name">Поиск по названию</string>
    <string name="sort_alphabetically">Сортировать по алфавиту</string>
    <string name="cancel">Отмена</string>
    <string name="apply">Применить</string>
    <string name="no_habits_found">Не нашлось ни одной привычки :(</string>
    <string name="sort_edititme">Сортировать по времени редактирования</string>
    <string name="sort_by">Сортировать по:</string>
    <string name="sort_direction">Направление сортировки:</string>
    <string name="ascending">По возрастанию</string>
    <string name="descending">По убыванию</string>
    <string name="name">Название</string>
    <string name="date">Дата</string>
    <string name="search">Поиск</string>
    <string name="delete">Удалить</string>
    <string name="count">Сколько раз</string>
    <string name="done">Сделано</string>
</resources>